--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,38 +1,34 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> Income Classification </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="static/css/style.css">
-</head>
-
+  <head>
+     <title>Income Classification</title>
+     <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+    body{
+    margin: auto;
+    align-content: center;
+    background-color: lightblue;
+}
+</style>
+  </head>
 <body>
   <div class="container">
     <div class="jumbotron text-center">
       <h1>Will you make over 50K or under 50K</h1>
     </div>
     <br>
-  <style>
-    input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-  }
-</style>
+<form class="text-center">
     <form action="/results" method="POST">
-        <label for="sex">Gender</label>
+        <label style= "color:darkblue " for="sex"><h2>Gender<h2></label>
         <select id="sex" name="sex">
           <option value="0" selected="selected">male</option>
           <option value="1" selected="selected">female</option>
         </select>
       <br>
-        <label for="marital-status">Select Your Marital Status</label>
+      <br>
+        <label style= "color:darkblue "  for="marital-status"><h2>Select Your Marital Status</h2></label>
         <select id="marital-status" name="marital-status">
           <option value="0" selected="selected">Married-spouse-absent</option>
           <option value="1" selected="selected">Widowed</option>
@@ -43,13 +39,16 @@
           <option value="6" selected="selected">Married-AF-spouse</option>
       </select>
       <br>
-        <label for="education_num">Enter your education-num (1-16)</label>
+      <br>
+        <label style= "color:darkblue " for="education_num"><h2>Enter your highest level of education achieved in numerical form</h2></label>
         <input type= "text" id="education-num" name="education-num" />
       <br>
-        <label for="age">age</label>
+      <br>
+        <label style= "color:darkblue " for="age"><h2>age</label></h2>
         <input type= "text" id="age" name="age" />
       <br>
-    <input type="submit" value="get prediction" />
+      <br>
+          <button type="submit" class="get prediction">Get Prediction</button>
     </form>
   </div>
   </body>
