--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
+  <head>
+     <title>Income Classification</title>
+     <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body{
+    margin: auto;
+    align-content: center;
+    background-color: lightblue;
+}
+</style>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> Income Classification </title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="static/css/style.css">
-</head>
   <body>
     <div class="container">
       <div class="jumbotron text-center">
